Use immutable values to represent graph state.

--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "react": "~0.13.3",
-    "interact": "~1.2.4"
+    "interact": "~1.2.4",
+    "immutable": "~3.7.4"
   }
 }
