--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-   "name": "nbe-react",
-   "version": "0.1.0-pre",
-   "description": "Node based editing for the web (react-based)",
-   "main": "src/nbe.jsx",
-   "dependencies": {
-      "babel": "^5.6.1",
-      "react-tools": "^0.13.3"
-   },
-   "devDependencies": {},
-   "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
-   },
-   "author": "Michael Kurze <michael.kurze@23x5.net>",
-   "license": "MIT"
+  "name": "nbe-react",
+  "version": "0.1.0-pre",
+  "description": "Node based editing for the web (react-based)",
+  "main": "src/nbe.jsx",
+  "dependencies": {
+  },
+  "devDependencies": {
+    "babel": "^5.6.14",
+    "eslint": "^0.24.1",
+    "eslint-plugin-react": "^2.7.0"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Michael Kurze <michael.kurze@23x5.net>",
+  "license": "MIT"
 }
