--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
   "devDependencies": {
     "babel": "^5.6.14",
     "eslint": "^0.24.1",
-    "eslint-plugin-react": "^2.7.0"
+    "eslint-plugin-react": "^2.7.0",
+    "grunt": "~0.4.4",
+    "grunt-contrib-connect": "~0.10.1"
   },
   "scripts": {
+    "start": "grunt start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Michael Kurze <michael.kurze@23x5.net>",
