fleshed out the specs

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "nbe-react",
+  "name": "wireflow",
   "version": "0.1.0-pre",
   "authors": [
     "Michael Kurze <michael@thefoundation.de>"
