--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,9 @@
   ],
   "description": "Node based editing for the web (react-based)",
   "main": "build/wireflow.js",
-  "moduleType": [ "amd" ],
+  "moduleType": [
+    "amd"
+  ],
   "license": "MIT",
   "ignore": [
     "**/.*",
@@ -18,7 +20,8 @@
   "dependencies": {
     "immutable": "~3.7.4",
     "requirejs": "~2.1.20",
-    "react": "~0.13.3"
+    "react": "~0.13.3",
+    "dagre": "~0.7.4"
   },
   "devDependencies": {
     "jasmine": "~2.3.4"
