--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "wireflow",
-  "version": "0.2.0-pre",
+  "version": "0.2.0",
   "authors": [
     "Michael Kurze <michael@thefoundation.de>"
   ],
