--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "scripts": {
     "start": "grunt start",
+    "prepublish": "babel --extension jsx src/ --out-dir=build/ && babel --extension jsx demos/fusebox/src/ --out-dir=demos/fusebox/build/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Michael Kurze <michael.kurze@23x5.net>",
