--- a/.eslintrc
+++ b/.eslintrc
@@ -31,6 +31,7 @@
     "no-param-reassign": 2,
     "no-use-before-define": [ 2, "nofunc" ],
     "no-unused-vars": [2, {"vars": "all", "args": "none"}],
+    "no-var": 0,
     "radix": 2,
     "quotes": [ 2, "single", "avoid-escape" ],
     "no-throw-literal": 1,
