--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wireflow",
-  "version": "0.4.0-pre",
+  "version": "0.4.0-alpha.2",
   "description": "Node based editing for the web (react-based)",
   "main": "src/nbe.jsx",
   "dependencies": {},
