(#4) upgraded React to v0.14.x

--- a/.babelrc
+++ b/.babelrc
@@ -2,5 +2,9 @@
   "sourceMaps": "inline",
   "modules": "amd",
   "retainLines": true,
-  "sourceRoot": "src"
+  "sourceRoot": "src",
+  "optional": [
+    "optimisation.react.inlineElements",
+    "optimisation.react.constantElements"
+  ]
 }
