--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wireflow",
-  "version": "0.7.0-pre",
+  "version": "0.7.0-alpha.0",
   "description": "Node based editing for the web (react-based)",
   "main": "build/wireflow.js",
   "repository": {
