(#6) fixed NPM bundle by including `lib`

--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
     "Michael Kurze <michael@thefoundation.de>"
   ],
   "description": "Node based editing for the web (react-based)",
-  "main": "build/wireflow.js",
+  "main": "lib/wireflow.js",
   "moduleType": [
     "amd"
   ],
